# Context-Aware-FIrewall-Suricata-

./: build_ground_truth.py  merged.py  run_inference.py  setup.sh  something.py
docs/: ARCHITECTURE_AUDIT_REALTIME_IDS_IPS.md  CICIDS_1_dataset_analysis.md  CONTEXT_ENGINE_SIGNALS_AUDIT.md  EVE_EXTRACTOR_SOURCE_OF_TRUTH.md  FEATURE_33_UPGRADE_FEASIBILITY.md  FEATURE_DERIVATION.md  INFRASTRUCTURE.md  MANUAL.md  MULTICORE_EVALUATION.md  README.md  RUNTIME_PIPELINE_UPGRADE.md  SANITY_CHECK_BEHAVIOR_ONLY_NO_IP_LEAKAGE.md  SECURITY_CAPABILITY_AUDIT.md  TECHNICAL_AUDIT_ML_FIREWALL_TRAINING.md  UNIFIED_45_FEATURES_PIPELINE_AND_FORMULAE.txt  ZERO_SIGNATURE_FEASIBILITY.md  behavior_only_refactor_evaluation.md  inference.md  pipeline.md  pipeline_audit.md  requirements.txt  training.md
enforcement/: firewall.py
feature_engineering/: __init__.py  alert_features.py  basic_flow_features.py
inference/: __init__.py  behavioral_features.py  context_engine.py  enforcement_engine.py  firewall_adapter_stub.py  runtime_scoring.py
infrastructure/: architecture_overview.md  data_flow_diagram.md
ingestion/: __init__.py  enhanced_eve_builder.py  flow_identity.py  flow_tcp_behavioral_engine.py  identity_key.py  src_ip_temporal_features.py  suricata_loader.py  (+2 more)
logs/: block_timing.json  (+2 more)
rust/eve_extractor/: Cargo.toml  README.md  pyproject.toml  rust-toolchain.toml
rust/eve_extractor/benchmarks/: baseline_metrics.txt  optimization_results.txt
rust/eve_extractor/src/: config.rs  extractor.rs  fast_flow_dedupe.rs  flow_tcp_behavioral_engine.rs  join_pipeline.rs  lib.rs  typed_flow.rs
(+59 files in other folders)
