[package]
name = "eve_extractor"
version = "0.1.0"
edition = "2021"
description = "Fast Suricata EVE flow → unified behavioral features (PyO3 extension)"

[lib]
crate-type = ["cdylib", "rlib"]
name = "eve_extractor"

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
indexmap = "2.2"
chrono = { version = "0.4", default-features = false, features = ["alloc", "std", "clock"] }
# Native EVE → join → Parquet (no Python per-line hot path)
arrow = "53"
parquet = "53"
csv = "1.3"
rustc-hash = "2.1"

[profile.release]
codegen-units = 1
lto = true
