[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "eve-extractor"
version = "0.1.0"
description = "Rust-accelerated Suricata EVE unified behavioral feature extraction"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "eve_extractor"
